--- a/src/style.css
+++ b/src/style.css
@@ -6,14 +6,13 @@
         background-color: WhiteSmoke;
         background-image: url(img/prism.png);
         background-repeat: repeat;
-        font-family:Arial, Helvetica, sans-serif;
+        font-family: Arial, Helvetica, sans-serif;
     }
-
- 
+    
     ul.header {
-        height:52px;
-        width:100%;
-        margin:0;
+        height: 52px;
+        width: 100%;
+        margin: 0;
         padding: 0;
         overflow: hidden;
         background-color: teal;
@@ -23,25 +22,21 @@
     ul.header li {
         float: left;
     }
-
-    ul.header li:last-child {
-        float: right;
-    }
     
-    ul.header li a, ul.header li strong {
-        height:52px;
+    ul.header li a,
+    ul.header li strong {
+        height: 52px;
         display: block;
         color: WhiteSmoke;
         text-align: center;
         line-height: 26px;
-        padding: 14px 16px;
+        padding: 14px 18px;
         text-decoration: none;
-        text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
+        text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
     }
     
     ul.header li a.active {
         color: black !important;
-
     }
     
     ul.header li a:hover:not(.active) {
@@ -50,49 +45,69 @@
     
     .selected {
         background-color: whiteSmoke;
-        box-shadow: 1px 1px 2px rgba(0,0,0,0.4);
+        box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
     }
     
     .all-content {
         min-height: 100vh;
     }
-
+    
     .page {
         margin: 0 auto;
         max-width: 720px;
-        box-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+        box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
     }
     
     .content {
-        min-height: calc(100vh - 52px - 128px); /* 100% - menu - h1 */
+        min-height: calc(100vh - 52px - 128px);
+        /* 100% - menu - h1 */
         background-color: WhiteSmoke;
     }
     
     .innerContent {
         padding: 20px;
     }
-
+    
     h1 {
-        display:block;
-        max-width:720px;
-        margin:0 auto !important;
-        height:128px;
+        display: block;
+        max-width: 720px;
+        margin: 0 auto !important;
+        height: 128px;
         line-height: 128px !important;
         color: WhiteSmoke;
-        font-size:4rem !important;
-        font-weight:600 !important;
-        text-shadow: 2px 2px 4px rgba(0,0,0,0.4);
+        font-size: 4rem !important;
+        font-weight: 600 !important;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
     }
-
+    
     h2 {
-        padding:20px 0;
+        padding: 20px 0;
     }
-
+    
     form {
-        display:flex;
+        display: flex;
         flex-wrap: wrap;
-        gap:24px;
+        gap: 24px;
     }
+    
     form div {
         width: calc(50% - 12px);
+    }
+    
+    .resultView {
+        display:flex;
+        flex-wrap: wrap;
+        gap:20px;
+        align-items: center;
+        justify-content: center; 
+    }
+    
+    .resultView div {
+        padding: 6px;
+        overflow:hidden;
+        width: calc(33% - 20px);
+        min-width:150px;
+        background:whitesmoke;
+        border-radius:5px;
+        box-shadow: 1px 1px 2px rgba(0,0,0,0.4);
     }
