--- a/src/style.css
+++ b/src/style.css
@@ -111,3 +111,8 @@
         border-radius:5px;
         box-shadow: 1px 1px 2px rgba(0,0,0,0.4);
     }
+
+    #about_html a {
+        display:block;
+        margin: 2px 0;
+    }
